[gd_scene load_steps=59 format=3 uid="uid://cex8fxk6ikeo0"]

[ext_resource type="Script" path="res://scripts/dungeon/player.gd" id="1_ai3ur"]
[ext_resource type="AudioStream" uid="uid://djaw43wugd1n4" path="res://music/sounds/walk_knight.wav" id="2_aupdr"]
[ext_resource type="Texture2D" uid="uid://c2frjrn4nyslq" path="res://img/$ limp.png" id="2_xyq8k"]
[ext_resource type="AudioStream" uid="uid://tvj2m77ka2fm" path="res://music/sounds/coin.wav" id="3_7gskd"]
[ext_resource type="AudioStream" uid="uid://ci6uplodhg6wk" path="res://music/sounds/hurt_knight.wav" id="3_tx4jo"]
[ext_resource type="Texture2D" uid="uid://b1xe1nutkgnk5" path="res://img/Retro Pixel Fire Effects Free.png" id="4_8dqms"]
[ext_resource type="AudioStream" uid="uid://bxnf10d43au82" path="res://music/sounds/EM_FIRE_CAST_01.wav" id="5_okee0"]

[sub_resource type="Animation" id="Animation_b1mf1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -10)]
}

[sub_resource type="Animation" id="Animation_8boff"]
resource_name = "damage"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.266667, 0.5, 1.5),
"transitions": PackedFloat32Array(0.403421, 1.23115, 8.28211, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.79206, 0.201601, 0.263607, 1), Color(1, 1, 1, 0.282353), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.266667, 0.5),
"transitions": PackedFloat32Array(0.138696, 2.37842, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -10), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p5m73"]
_data = {
"RESET": SubResource("Animation_b1mf1"),
"damage": SubResource("Animation_8boff")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_ut6ns"]
atlas = ExtResource("2_xyq8k")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_nhdsp"]
atlas = ExtResource("2_xyq8k")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_hs7lj"]
atlas = ExtResource("2_xyq8k")
region = Rect2(192, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_57q7j"]
atlas = ExtResource("2_xyq8k")
region = Rect2(96, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_4hr2k"]
atlas = ExtResource("2_xyq8k")
region = Rect2(0, 192, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_m5ucp"]
atlas = ExtResource("2_xyq8k")
region = Rect2(96, 192, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_r0sqe"]
atlas = ExtResource("2_xyq8k")
region = Rect2(0, 288, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_gdai6"]
atlas = ExtResource("2_xyq8k")
region = Rect2(96, 288, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_5njdy"]
atlas = ExtResource("2_xyq8k")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_xxk8b"]
atlas = ExtResource("2_xyq8k")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_qod5j"]
atlas = ExtResource("2_xyq8k")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_napr8"]
atlas = ExtResource("2_xyq8k")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_jo21l"]
atlas = ExtResource("2_xyq8k")
region = Rect2(0, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_06tsj"]
atlas = ExtResource("2_xyq8k")
region = Rect2(96, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_s8esx"]
atlas = ExtResource("2_xyq8k")
region = Rect2(192, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_3fgpo"]
atlas = ExtResource("2_xyq8k")
region = Rect2(96, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_dfjkf"]
atlas = ExtResource("2_xyq8k")
region = Rect2(0, 192, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_k3qqq"]
atlas = ExtResource("2_xyq8k")
region = Rect2(96, 192, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_v2eyw"]
atlas = ExtResource("2_xyq8k")
region = Rect2(192, 192, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_r12vp"]
atlas = ExtResource("2_xyq8k")
region = Rect2(96, 192, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_dwpav"]
atlas = ExtResource("2_xyq8k")
region = Rect2(0, 288, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_fpxvr"]
atlas = ExtResource("2_xyq8k")
region = Rect2(96, 288, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_n17ka"]
atlas = ExtResource("2_xyq8k")
region = Rect2(192, 288, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_0mgw4"]
atlas = ExtResource("2_xyq8k")
region = Rect2(96, 288, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_nwcbt"]
atlas = ExtResource("2_xyq8k")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ye2a"]
atlas = ExtResource("2_xyq8k")
region = Rect2(96, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_kuli8"]
atlas = ExtResource("2_xyq8k")
region = Rect2(96, 192, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_m3r60"]
atlas = ExtResource("2_xyq8k")
region = Rect2(96, 288, 96, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_2oeqw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ut6ns")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nhdsp")
}],
"loop": false,
"name": &"attack_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hs7lj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_57q7j")
}],
"loop": false,
"name": &"attack_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4hr2k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m5ucp")
}],
"loop": false,
"name": &"attack_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r0sqe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gdai6")
}],
"loop": false,
"name": &"attack_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5njdy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xxk8b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qod5j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_napr8")
}],
"loop": true,
"name": &"move_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jo21l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_06tsj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s8esx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3fgpo")
}],
"loop": true,
"name": &"move_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dfjkf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k3qqq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v2eyw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r12vp")
}],
"loop": true,
"name": &"move_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dwpav")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fpxvr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n17ka")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0mgw4")
}],
"loop": true,
"name": &"move_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nwcbt")
}],
"loop": true,
"name": &"stop_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ye2a")
}],
"loop": true,
"name": &"stop_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kuli8")
}],
"loop": true,
"name": &"stop_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m3r60")
}],
"loop": true,
"name": &"stop_up",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7nbsf"]
radius = 14.0
height = 66.0

[sub_resource type="AtlasTexture" id="AtlasTexture_e83qb"]
atlas = ExtResource("4_8dqms")
region = Rect2(0, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7xyyc"]
atlas = ExtResource("4_8dqms")
region = Rect2(64, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ulscl"]
atlas = ExtResource("4_8dqms")
region = Rect2(128, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o4uvw"]
atlas = ExtResource("4_8dqms")
region = Rect2(192, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tbii8"]
atlas = ExtResource("4_8dqms")
region = Rect2(256, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4tqfh"]
atlas = ExtResource("4_8dqms")
region = Rect2(320, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yv1uu"]
atlas = ExtResource("4_8dqms")
region = Rect2(384, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rjfpx"]
atlas = ExtResource("4_8dqms")
region = Rect2(448, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fw6m0"]
atlas = ExtResource("4_8dqms")
region = Rect2(512, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1x6ma"]
atlas = ExtResource("4_8dqms")
region = Rect2(576, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_eyun5"]
atlas = ExtResource("4_8dqms")
region = Rect2(640, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h1fkv"]
atlas = ExtResource("4_8dqms")
region = Rect2(704, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j75ca"]
atlas = ExtResource("4_8dqms")
region = Rect2(768, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_648pt"]
atlas = ExtResource("4_8dqms")
region = Rect2(960, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y5wx7"]
atlas = ExtResource("4_8dqms")
region = Rect2(1024, 576, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_b6yks"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e83qb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7xyyc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ulscl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o4uvw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tbii8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4tqfh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yv1uu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rjfpx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fw6m0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1x6ma")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eyun5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h1fkv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j75ca")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_648pt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y5wx7")
}],
"loop": false,
"name": &"default",
"speed": 40.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_dhhe6"]
radius = 41.8764

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_af1ty"]
radius = 20.0
height = 68.0

[node name="Player" type="CharacterBody2D"]
position = Vector2(432, 272)
collision_layer = 4
collision_mask = 6
script = ExtResource("1_ai3ur")

[node name="sounds" type="Node2D" parent="."]

[node name="walk_Sound" type="AudioStreamPlayer" parent="sounds"]
stream = ExtResource("2_aupdr")
volume_db = 10.0
pitch_scale = 0.7

[node name="get_thing_Sound" type="AudioStreamPlayer" parent="sounds"]
stream = ExtResource("3_7gskd")

[node name="hit_Sound" type="AudioStreamPlayer" parent="sounds"]
stream = ExtResource("3_tx4jo")
volume_db = 10.0
pitch_scale = 1.3

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true
editor_draw_drag_margin = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../AnimatedSprite2D")
libraries = {
"": SubResource("AnimationLibrary_p5m73")
}

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -10)
sprite_frames = SubResource("SpriteFrames_2oeqw")
animation = &"stop_down"

[node name="PlayerCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, 14)
shape = SubResource("CapsuleShape2D_7nbsf")

[node name="attack_zone" type="Area2D" parent="."]
position = Vector2(0, 13)
collision_layer = 4
collision_mask = 4

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="attack_zone"]
position = Vector2(-43.2499, 11.7501)
scale = Vector2(1.83594, 1.83594)
sprite_frames = SubResource("SpriteFrames_b6yks")
frame = 14
frame_progress = 1.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="attack_zone"]
stream = ExtResource("5_okee0")
volume_db = -20.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack_zone"]
position = Vector2(-44, 2)
scale = Vector2(1.26563, 1.26563)
shape = SubResource("CircleShape2D_dhhe6")

[node name="Fires" type="Node2D" parent="."]

[node name="hit_zone" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="hit_zone"]
position = Vector2(0, 11)
shape = SubResource("CapsuleShape2D_af1ty")

[connection signal="finished" from="sounds/walk_Sound" to="." method="_on_audio_stream_player_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="animation_looped" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_looped"]
[connection signal="animation_finished" from="attack_zone/AnimatedSprite2D" to="." method="_attack_animation_finished"]
